fixing dark mode issue in watch page as scroll content was not taking bg color correctly due to 100vh that is set in watchpage css

--- a/src/components/WatchPage/WatchPage.css
+++ b/src/components/WatchPage/WatchPage.css
@@ -1,7 +1,6 @@
 .watch-container {
     margin: 24px;
     display: flex;
-    height: 100vh;
 }
 
 .watch-video-title {
