--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background-color: #0f0f0f;
+  background-color: black;
   overflow-x: hidden;
   font-family: "Rubik", sans-serif;
   color: #f1f1f1;
